// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/atoms/Button Custom Style 1`] = `
<button
  className="sc-AxjAm eAuYVN"
  color="white"
  onClick={[Function]}
  size="large"
>
  button
</button>
`;

exports[`Storyshots components/atoms/Button Large 1`] = `
<button
  className="sc-AxjAm bTSPsi"
  color="white"
  onClick={[Function]}
  size="large"
>
  button
</button>
`;

exports[`Storyshots components/atoms/Button Medium 1`] = `
<button
  className="sc-AxjAm jYDBct"
  color="white"
  onClick={[Function]}
  size="medium"
>
  button
</button>
`;

exports[`Storyshots components/atoms/Button Orange 1`] = `
<button
  className="sc-AxjAm kSCyOa"
  color="white"
  onClick={[Function]}
  size="medium"
>
  button
</button>
`;

exports[`Storyshots components/atoms/Button Small 1`] = `
<button
  className="sc-AxjAm jjKKnu"
  color="white"
  onClick={[Function]}
  size="small"
>
  button
</button>
`;

exports[`Storyshots components/atoms/Button Standard 1`] = `
<button
  className="sc-AxjAm jYDBct"
  color="white"
  onClick={[Function]}
  size="medium"
>
  button
</button>
`;

exports[`Storyshots components/atoms/Input Standard 1`] = `
<input
  className="sc-AxirZ cSFmzz"
  onChange={[Function]}
  onKeyPress={[Function]}
  value="Standard"
/>
`;

exports[`Storyshots components/atoms/Text Medium Size 1`] = `
<div
  className="sc-AxiKw gtQIsi"
  fontSize="1.3rem"
>
  MediumSize
</div>
`;

exports[`Storyshots components/atoms/Text Small 1`] = `
<div
  className="sc-AxiKw bpIilB"
  fontSize="0.5rem"
>
  SmallSize
</div>
`;

exports[`Storyshots components/atoms/Text Standard 1`] = `
<div
  className="sc-AxiKw jopmOO"
>
  Standard
</div>
`;

exports[`Storyshots components/molecules/Message Mine 1`] = `
<div
  className="sc-AxhCb jezmcA"
>
  <div
    className="sc-AxhUy iteshX"
  >
    <div
      className="sc-AxiKw gtQIsi"
      fontSize="1.3rem"
    >
      Mine Message
    </div>
    <div
      className="sc-AxiKw bpIilB"
      fontSize="0.5rem"
    >
      오전 12:00:00
    </div>
  </div>
</div>
`;

exports[`Storyshots components/molecules/Message TEXT 1`] = `
<div
  className="sc-AxhCb jezmcA"
>
  <div
    className="sc-AxhUy iteshX"
  >
    <div
      className="sc-AxiKw gtQIsi"
      fontSize="1.3rem"
    >
      MINE TEXT Message
    </div>
    <div
      className="sc-AxiKw bpIilB"
      fontSize="0.5rem"
    >
      오전 12:00:00
    </div>
  </div>
</div>
`;

exports[`Storyshots components/molecules/Message Theirs 1`] = `
<div
  className="sc-AxhCb eyuKQX"
>
  <div
    className="sc-AxhUy iteshX"
  >
    <div
      className="sc-AxiKw gtQIsi"
      fontSize="1.3rem"
    >
      Theirs Message
    </div>
    <div
      className="sc-AxiKw bpIilB"
      fontSize="0.5rem"
    >
      오전 12:00:00
    </div>
  </div>
</div>
`;

exports[`Storyshots components/molecules/MessageSender Column 1`] = `
<div
  className="sc-AxgMl khtuHx"
  direction="column"
>
  <input
    className="sc-AxirZ ipBNtJ"
    onChange={[Function]}
    onKeyPress={[Function]}
    value=""
  />
  <button
    className="sc-AxjAm fCASDM"
    color="white"
    onClick={[Function]}
    size="medium"
  >
    보내기
  </button>
</div>
`;

exports[`Storyshots components/molecules/MessageSender Default 1`] = `
<div
  className="sc-AxgMl ieaSax"
  direction="row"
>
  <input
    className="sc-AxirZ hPUeId"
    onChange={[Function]}
    onKeyPress={[Function]}
    value=""
  />
  <button
    className="sc-AxjAm fCASDM"
    color="white"
    onClick={[Function]}
    size="medium"
  >
    보내기
  </button>
</div>
`;

exports[`Storyshots components/organisms/Conversation Standard 1`] = `
<section
  className="sc-AxheI cmsdvn"
>
  <div
    className="sc-AxhCb jezmcA"
  >
    <div
      className="sc-AxhUy iteshX"
    >
      <div
        className="sc-AxiKw gtQIsi"
        fontSize="1.3rem"
      >
        hello world
      </div>
      <div
        className="sc-AxiKw bpIilB"
        fontSize="0.5rem"
      >
        2020-08-01 00:00:00
      </div>
    </div>
  </div>
  <div
    className="sc-AxhCb eyuKQX"
  >
    <div
      className="sc-AxhUy iteshX"
    >
      <div
        className="sc-AxiKw gtQIsi"
        fontSize="1.3rem"
      >
        hi
      </div>
      <div
        className="sc-AxiKw bpIilB"
        fontSize="0.5rem"
      >
        2020-08-01 01:00:00
      </div>
    </div>
  </div>
  <div
    className="sc-AxhCb eyuKQX"
  >
    <div
      className="sc-AxhUy iteshX"
    >
      <div
        className="sc-AxiKw gtQIsi"
        fontSize="1.3rem"
      >
        good
      </div>
      <div
        className="sc-AxiKw bpIilB"
        fontSize="0.5rem"
      >
        2020-08-02 00:00:00
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots components/organisms/MessageEditor Standard 1`] = `
<div
  className="sc-Axmtr WAiiP"
>
  <div
    className="sc-AxgMl ieaSax"
    direction="row"
  >
    <input
      className="sc-AxirZ hPUeId"
      onChange={[Function]}
      onKeyPress={[Function]}
      value=""
    />
    <button
      className="sc-AxjAm fCASDM"
      color="white"
      onClick={[Function]}
      size="medium"
    >
      보내기
    </button>
  </div>
</div>
`;

exports[`Storyshots pages/chat/room/template Standard 1`] = `
<div
  className="sc-AxmLO jkdtJG"
>
  <section
    className="sc-AxheI cmsdvn"
  >
    <div
      className="sc-AxhCb jezmcA"
    >
      <div
        className="sc-AxhUy iteshX"
      >
        <div
          className="sc-AxiKw gtQIsi"
          fontSize="1.3rem"
        >
          hello world
        </div>
        <div
          className="sc-AxiKw bpIilB"
          fontSize="0.5rem"
        >
          2020-08-01 00:00:00
        </div>
      </div>
    </div>
    <div
      className="sc-AxhCb eyuKQX"
    >
      <div
        className="sc-AxhUy iteshX"
      >
        <div
          className="sc-AxiKw gtQIsi"
          fontSize="1.3rem"
        >
          hi
        </div>
        <div
          className="sc-AxiKw bpIilB"
          fontSize="0.5rem"
        >
          2020-08-01 01:00:00
        </div>
      </div>
    </div>
    <div
      className="sc-AxhCb eyuKQX"
    >
      <div
        className="sc-AxhUy iteshX"
      >
        <div
          className="sc-AxiKw gtQIsi"
          fontSize="1.3rem"
        >
          good
        </div>
        <div
          className="sc-AxiKw bpIilB"
          fontSize="0.5rem"
        >
          2020-08-02 00:00:00
        </div>
      </div>
    </div>
  </section>
  <div
    className="sc-Axmtr WAiiP"
  >
    <div
      className="sc-AxgMl ieaSax"
      direction="row"
    >
      <input
        className="sc-AxirZ hPUeId"
        onChange={[Function]}
        onKeyPress={[Function]}
        value=""
      />
      <button
        className="sc-AxjAm fCASDM"
        color="white"
        onClick={[Function]}
        size="medium"
      >
        보내기
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots pages/rooms/board Standard 1`] = `
<div
  className="sc-fzpans jdxXew"
>
  <section
    className="sc-fzoLsD cKxoEx"
  >
    <div
      className="sc-fzozJi lgNXDk"
    >
      <div
        className="sc-AxiKw gtQIsi"
        fontSize="1.3rem"
        onClick={[Function]}
      >
        hello world
      </div>
    </div>
    <div
      className="sc-fzozJi lgNXDk"
    >
      <div
        className="sc-AxiKw gtQIsi"
        fontSize="1.3rem"
        onClick={[Function]}
      >
        hi
      </div>
    </div>
  </section>
  <button
    className="sc-AxjAm HtRID"
    color="white"
    onClick={[Function]}
    size="large"
  >
    채팅방 생성
  </button>
</div>
`;

exports[`Storyshots pages/rooms/maker Standard 1`] = `
<div>
  <div
    className="RoomMakeHeader"
  >
    <label
      className="fontSetting"
    >
      서비스명
    </label>
    <img
      alt=""
      className="userIcon"
      src="userIcon.PNG"
    />
  </div>
  <div>
    <div
      className="enrollment"
    >
      <label
        className="radiusBox"
      >
        채팅방 개설
      </label>
      <div
        className="RoomMakeTitle"
      >
        <label
          className="fontSetting"
        >
          채팅방 명 : 
        </label>
        <input
          className="RoomMakeInput"
          id="title"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="입력해주세요."
          value=""
        />
      </div>
      <button
        className="RoomMakeBtn"
        onClick={[Function]}
      >
        생성
      </button>
    </div>
  </div>
</div>
`;
